--- a/packages/storybook-html/stories/components/sections/sections.mdx
+++ b/packages/storybook-html/stories/components/sections/sections.mdx
@@ -19,7 +19,7 @@ Sections are a layout style that wrap content in a white or grey background with
 The default section displays left-aligned content, medium top and bottom padding, on a white background contained to the page width.
 
 <Canvas sourceState='hidden'>
-  <Story id="components-sections--sections-default" />
+  <Story of={SectionsStories.sectionsDefault} /> 
 </Canvas>
 
 ```html
@@ -44,7 +44,7 @@ The variants can be used in isolation or combined. For example if you would like
 Add class `uq-section--centered` to centre-align the content.
 
 <Canvas sourceState='hidden'>
-  <Story id="components-sections--sections-centered" />
+  <Story of={SectionsStories.sectionsCentered} /> 
 </Canvas>
 
 ```html
@@ -65,7 +65,7 @@ Add class `uq-section--centered` to centre-align the content.
 Add class `uq-section--narrow` to contain the content to a narrow container.
 
 <Canvas sourceState='hidden'>
-  <Story id="components-sections--sections-narrow" />
+  <Story of={SectionsStories.sectionsNarrow} /> 
 </Canvas>
 
 ```html
@@ -86,7 +86,7 @@ Add class `uq-section--narrow` to contain the content to a narrow container.
 Add class `uq-section--shaded` to apply a light-grey background to the section.
 
 <Canvas sourceState='hidden'>
-  <Story id="components-sections--sections-shaded" />
+  <Story of={SectionsStories.sectionsShaded} /> 
 </Canvas>
 
 ```html
@@ -119,7 +119,7 @@ Default sections have medium top and bottom padding. The following variants prov
 #### No padding
 
 <Canvas sourceState='hidden'>
-  <Story id="components-sections--sections-no-padding" />
+  <Story of={SectionsStories.sectionsNoPadding} /> 
 </Canvas>
 
 ```html
@@ -141,7 +141,7 @@ Default sections have medium top and bottom padding. The following variants prov
 #### Large padding
 
 <Canvas sourceState='hidden'>
-  <Story id="components-sections--sections-large-padding" />
+  <Story of={SectionsStories.sectionsLargePadding} /> 
 </Canvas>
 
 ```html
