--- a/packages/storybook-html/stories/components/side-nav/side-nav.mdx
+++ b/packages/storybook-html/stories/components/side-nav/side-nav.mdx
@@ -19,9 +19,7 @@ A vertical list of links for site navigation typically placed next to the body c
 ### Single-level
 
 <Canvas sourceState="hidden">
-  {/* <Story id="components-side-nav--side-nav-single-level" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
-
-  <Story id="components-side-nav--side-nav-single-level" />
+  <Story of={SideNavStories.sideNavSingleLevel} /> 
 </Canvas>
 
 ```html
@@ -52,9 +50,7 @@ A vertical list of links for site navigation typically placed next to the body c
 ### Multi-level
 
 <Canvas sourceState="hidden">
-  {/* <Story id="components-side-nav--side-nav-multi-level" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
-
-  <Story id="components-side-nav--side-nav-multi-level" />
+  <Story of={SideNavStories.sideNavMultiLevel} /> 
 </Canvas>
 
 ```html
