--- a/packages/storybook-html/stories/components/tabs/tabs.mdx
+++ b/packages/storybook-html/stories/components/tabs/tabs.mdx
@@ -24,9 +24,7 @@ hierarchical level.
 ### Default / Outline
 
 <Canvas sourceState="hidden">
-  {/* <Story id="components-tabs--tabs-outline" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
-
-  <Story id="components-tabs--tabs-outline" />
+  <Story of={TabsStories.tabsOutline} /> 
 </Canvas>
 
 ```html
@@ -102,9 +100,7 @@ hierarchical level.
 ### Minimal
 
 <Canvas sourceState="hidden">
-  {/* <Story id="components-tabs--tabs-minimal" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
-
-  <Story id="components-tabs--tabs-minimal" />
+  <Story of={TabsStories.tabsMinimal} />
 </Canvas>
 
 ```html
@@ -114,9 +110,7 @@ hierarchical level.
 ### Lined
 
 <Canvas sourceState="hidden">
-  {/* <Story id="components-tabs--tabs-lined" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
-
-  <Story id="components-tabs--tabs-lined" />
+  <Story of={TabsStories.tabsLined} />
 </Canvas>
 
 ```html
@@ -126,9 +120,7 @@ hierarchical level.
 ### With icon
 
 <Canvas sourceState="hidden">
-  {/* <Story id="components-tabs--tabs-with-icon" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
-
-  <Story id="components-tabs--tabs-with-icon" />
+  <Story of={TabsStories.tabsWithIcon} />
 </Canvas>
 
 ```html
@@ -151,9 +143,7 @@ hierarchical level.
 ### Full width
 
 <Canvas sourceState="hidden">
-  {/* <Story id="components-tabs--tabs-full-width" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
-
-  <Story id="components-tabs--tabs-full-width" />
+  <Story of={TabsStories.tabsFullWidth} />
 </Canvas>
 
 ```html
@@ -163,9 +153,7 @@ hierarchical level.
 ### Small
 
 <Canvas sourceState="hidden">
-  {/* <Story id="components-tabs--tabs-small" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
-
-  <Story id="components-tabs--tabs-small" />
+  <Story of={TabsStories.tabsSmall} />
 </Canvas>
 
 ```html
@@ -175,9 +163,7 @@ hierarchical level.
 ### Reversed
 
 <Canvas sourceState="hidden">
-  {/* <Story id="components-tabs--tabs-reversed" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
-
-  <Story id="components-tabs--tabs-reversed" />
+  <Story of={TabsStories.tabsReversed} />
 </Canvas>
 
 ```html
