--- a/packages/storybook-html/stories/layout/page-layouts/sidebar/sidebar.docs.mdx
+++ b/packages/storybook-html/stories/layout/page-layouts/sidebar/sidebar.docs.mdx
@@ -1,5 +1,8 @@
-import { Story, Canvas } from "@storybook/addon-docs";
+import { Meta, Story, Canvas } from '@storybook/blocks';
 import StatusBadge from "../../../../.storybook/custom/components/StatusBadge";
+import * as SidebarStories from './sidebar.stories';
+
+<Meta of={SidebarStories} />
 
 # Sidebar layout
 
@@ -22,7 +25,7 @@ the `.uq-sections` element should be used within `.uq-sidebar-layout__main` to
 provide correct **section spacing**.
 
 <Canvas sourceState='hidden'>
-  <Story id="layout-page-layouts-sidebar--sidebar" />
+  <Story of={SidebarStories.Sidebar} />
 </Canvas>
 
 ```html
