--- a/packages/storybook-html/stories/layout/sections/sections.docs.mdx
+++ b/packages/storybook-html/stories/layout/sections/sections.docs.mdx
@@ -1,5 +1,8 @@
-import { Story, Canvas } from "@storybook/addon-docs";
+import { Meta, Story, Canvas } from '@storybook/blocks';
 import StatusBadge from "../../../.storybook/custom/components/StatusBadge";
+import * as SectionsStories from './sections.stories';
+
+<Meta of={SectionsStories} />
 
 # Sections
 
@@ -21,7 +24,7 @@ own `margin` property.
 `.uq-sections` elements can be safely nested within each other as needed.
 
 <Canvas sourceState='hidden'>
-  <Story id="layout-sections--sections" />
+  <Story of={SectionsStories.Sections} />
 </Canvas>
 
 ```html
