--- a/packages/storybook-html/stories/layout/container/container.docs.mdx
+++ b/packages/storybook-html/stories/layout/container/container.docs.mdx
@@ -1,5 +1,8 @@
-import { Story, Canvas } from "@storybook/addon-docs";
+import { Meta, Story, Canvas } from '@storybook/blocks';
 import StatusBadge from "../../../.storybook/custom/components/StatusBadge";
+import * as ContainerStories from './container.stories';
+
+<Meta of={ContainerStories} />
 
 # Container
 
@@ -22,7 +25,7 @@ It must not be a descendant of other `.uq-container` elements or elements that u
 `@include layout-containment`.
 
 <Canvas sourceState='hidden'>
-  <Story id="layout-container--container" />
+  <Story of={ContainerStories.Container} /> 
 </Canvas>
 
 ```html
